<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingRight="8dp"
    android:paddingLeft="8dp">

    <Button
        android:id="@+id/new_interview"
        style="@style/button_style_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/LightGrey"
        android:contentDescription="@string/new_interview_text_description"
        android:text="@string/new_interview_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/interview_gallery"
        style="@style/button_style_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/LightGrey"
        android:contentDescription="@string/interview_gallery_description"
        android:text="@string/interview_gallery_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


    <Button
        android:id="@+id/extras_frame"
        style="@style/button_style_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/LightGrey"
        android:contentDescription="@string/extras_description"
        android:text="@string/settings" />


</LinearLayout>