<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".InterviewGalleryActivity$PlaceholderFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="64dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/section_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:gravity="end" />

            <TextView
                android:id="@+id/interview_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pv_fragment_default_top_margin"
                android:contentDescription="@string/interview_gallery_each_title_detail"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/temporary_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pv_fragment_default_top_margin"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/interviewee_text_display_description"
                    android:text="@string/interviewee_text_display"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/interview_first_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@string/interview_gallery_each_title_detail"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/temporary_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:id="@+id/interview_last_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@string/interview_gallery_each_title_detail"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/temporary_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>

            <TextView
                android:id="@+id/galleryInterviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/interview_textview_brief_summary"
                android:maxLines="10"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>